--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@types/canvasjs": "^1.9.6",
+    "bootstrap": "^4.5.2",
     "canvasjs": "^1.9.6",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
