--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@types/canvasjs": "^1.9.6",
+    "angular-datatables": "^9.0.2",
     "bootstrap": "^4.5.2",
     "canvasjs": "^1.9.6",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
+    "datatables.net": "^1.10.21",
+    "datatables.net-dt": "^1.10.21",
     "jquery": "^3.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -35,9 +38,10 @@
     "@angular/compiler-cli": "~9.1.3",
     "@angular/language-service": "~9.1.3",
     "@types/chart.js": "^2.9.20",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.35",
+    "@types/jquery": "^3.5.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
